--- a/2019/pom.xml
+++ b/2019/pom.xml
@@ -24,6 +24,7 @@
     <modules>
         <module>2019-jour1</module>
         <module>2019-jour2</module>
+        <module>2019-jour3</module>
     </modules>
 
 
