advent of code 2019 day 4

--- a/2019/pom.xml
+++ b/2019/pom.xml
@@ -25,6 +25,7 @@
         <module>2019-jour1</module>
         <module>2019-jour2</module>
         <module>2019-jour3</module>
+        <module>2019-jour4</module>
     </modules>
 
 
