--- a/2019/pom.xml
+++ b/2019/pom.xml
@@ -26,6 +26,7 @@
         <module>2019-jour2</module>
         <module>2019-jour3</module>
         <module>2019-jour4</module>
+        <module>2019-jour5</module>
     </modules>
 
 
