--- a/2019/pom.xml
+++ b/2019/pom.xml
@@ -27,6 +27,7 @@
         <module>2019-jour3</module>
         <module>2019-jour4</module>
         <module>2019-jour5</module>
+        <module>2019-jour6</module>
     </modules>
 
 
