advent of code 2019 day 7

--- a/2019/pom.xml
+++ b/2019/pom.xml
@@ -28,6 +28,7 @@
         <module>2019-jour4</module>
         <module>2019-jour5</module>
         <module>2019-jour6</module>
+        <module>2019-jour7</module>
     </modules>
 
 
