--- a/2019/pom.xml
+++ b/2019/pom.xml
@@ -29,6 +29,7 @@
         <module>2019-jour5</module>
         <module>2019-jour6</module>
         <module>2019-jour7</module>
+        <module>2019-jour8</module>
     </modules>
 
 
