--- a/2019/pom.xml
+++ b/2019/pom.xml
@@ -30,6 +30,7 @@
         <module>2019-jour6</module>
         <module>2019-jour7</module>
         <module>2019-jour8</module>
+        <module>2019-jour9</module>
     </modules>
 
 
