advent of code 2019 jour 10

--- a/2019/pom.xml
+++ b/2019/pom.xml
@@ -31,6 +31,7 @@
         <module>2019-jour7</module>
         <module>2019-jour8</module>
         <module>2019-jour9</module>
+        <module>2019-jour10</module>
     </modules>
 
 
