advent of code 2019 jour 11

--- a/2019/pom.xml
+++ b/2019/pom.xml
@@ -32,6 +32,7 @@
         <module>2019-jour8</module>
         <module>2019-jour9</module>
         <module>2019-jour10</module>
+        <module>2019-jour11</module>
     </modules>
 
 
