advent of code 2020 day 4

--- a/2020/pom.xml
+++ b/2020/pom.xml
@@ -12,6 +12,7 @@
         <module>2020-jour1</module>
         <module>2020-jour2</module>
         <module>2020-jour3</module>
+        <module>2020-jour4</module>
     </modules>
 
     <build>
