advent of code 2020 day 5

--- a/2020/pom.xml
+++ b/2020/pom.xml
@@ -13,6 +13,7 @@
         <module>2020-jour2</module>
         <module>2020-jour3</module>
         <module>2020-jour4</module>
+        <module>2020-jour5</module>
     </modules>
 
     <build>
