advent of code 2020 day 6

--- a/2020/2020-jour6/pom.xml
+++ b/2020/2020-jour6/pom.xml
@@ -2,20 +2,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>2020</artifactId>
+        <groupId>org.example</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>2020</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>2020-jour1</module>
-        <module>2020-jour2</module>
-        <module>2020-jour3</module>
-        <module>2020-jour4</module>
-        <module>2020-jour5</module>
-        <module>2020-jour6</module>
-    </modules>
+    <artifactId>2020-jour6</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.0-jre</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
@@ -29,5 +36,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
