advent of code 2020 day 7

--- a/2020/pom.xml
+++ b/2020/pom.xml
@@ -15,6 +15,7 @@
         <module>2020-jour4</module>
         <module>2020-jour5</module>
         <module>2020-jour6</module>
+        <module>2020-jour7</module>
     </modules>
 
     <build>
