advent of code 2020 day 9

--- a/2020/pom.xml
+++ b/2020/pom.xml
@@ -17,6 +17,7 @@
         <module>2020-jour6</module>
         <module>2020-jour7</module>
         <module>2020-jour8</module>
+        <module>2020-jour9</module>
     </modules>
 
     <build>
