advent of code 2020 day 10

--- a/2020/pom.xml
+++ b/2020/pom.xml
@@ -18,6 +18,7 @@
         <module>2020-jour7</module>
         <module>2020-jour8</module>
         <module>2020-jour9</module>
+        <module>2020-jour10</module>
     </modules>
 
     <build>
