Advent Of Code 2020 Day 11 Java

--- a/Java/2020/pom.xml
+++ b/Java/2020/pom.xml
@@ -19,6 +19,7 @@
         <module>2020-jour8</module>
         <module>2020-jour9</module>
         <module>2020-jour10</module>
+        <module>2020-jour11</module>
     </modules>
 
     <build>
