Advent Of Code 2020 Day 12 Java

--- a/Java/2020/pom.xml
+++ b/Java/2020/pom.xml
@@ -20,6 +20,7 @@
         <module>2020-jour9</module>
         <module>2020-jour10</module>
         <module>2020-jour11</module>
+        <module>2020-Jour12</module>
     </modules>
 
     <dependencies>
