Advent Of Code 2020 Day 13 Java

--- a/Java/2020/pom.xml
+++ b/Java/2020/pom.xml
@@ -21,6 +21,7 @@
         <module>2020-jour10</module>
         <module>2020-jour11</module>
         <module>2020-Jour12</module>
+        <module>2020-jour13</module>
     </modules>
 
     <dependencies>
