Advent Of Code 2020 Day 12 Java refactoring

--- a/Java/2020/2020-jour12/pom.xml
+++ b/Java/2020/2020-jour12/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>2020-Jour12</artifactId>
+    <artifactId>2020-jour12</artifactId>
 
 
 </project>
