Advent Of Code 2020 Day 14 Java

--- a/Java/2020/pom.xml
+++ b/Java/2020/pom.xml
@@ -22,6 +22,7 @@
         <module>2020-jour11</module>
         <module>2020-Jour12</module>
         <module>2020-jour13</module>
+        <module>2020-jour14</module>
     </modules>
 
     <dependencies>
