--- a/Java/2020/2020-jour1/pom.xml
+++ b/Java/2020/2020-jour1/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>2020-jour1</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.eletutour</groupId>
+            <artifactId>2020</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
