--- a/Java/2020/2020-jour6/pom.xml
+++ b/Java/2020/2020-jour6/pom.xml
@@ -24,6 +24,14 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>com.eletutour</groupId>
+            <artifactId>2020</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
