Advent of Code Java 2020 Day 15

--- a/Java/2020/pom.xml
+++ b/Java/2020/pom.xml
@@ -23,6 +23,7 @@
         <module>2020-Jour12</module>
         <module>2020-jour13</module>
         <module>2020-jour14</module>
+        <module>2020-jour15</module>
     </modules>
 
     <dependencies>
