Advent of Code Java 2020 Day 16

--- a/Java/2020/pom.xml
+++ b/Java/2020/pom.xml
@@ -24,6 +24,7 @@
         <module>2020-jour13</module>
         <module>2020-jour14</module>
         <module>2020-jour15</module>
+        <module>2020-jour16</module>
     </modules>
 
     <dependencies>
