--- a/Java/2020/2020-jour14/pom.xml
+++ b/Java/2020/2020-jour14/pom.xml
@@ -13,7 +13,7 @@
     <dependencies>
         <dependency>
             <groupId>com.eletutour</groupId>
-            <artifactId>2020</artifactId>
+            <artifactId>printer</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
