--- a/Java/2020/2020-jour6/pom.xml
+++ b/Java/2020/2020-jour6/pom.xml
@@ -11,23 +11,10 @@
 
     <artifactId>2020-jour6</artifactId>
 
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>11</source>
-                    <target>11</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
     <dependencies>
         <dependency>
             <groupId>com.eletutour</groupId>
-            <artifactId>2020</artifactId>
+            <artifactId>printer</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
