Advent of Code Java 2020 Day 18

--- a/Java/2020/pom.xml
+++ b/Java/2020/pom.xml
@@ -27,6 +27,7 @@
         <module>2020-jour16</module>
         <module>2020-jour17</module>
         <module>printer</module>
+        <module>2020-jour18</module>
     </modules>
 
     <dependencies>
