Advent of Code Java 2020 Day 20

--- a/Java/2020/pom.xml
+++ b/Java/2020/pom.xml
@@ -29,6 +29,7 @@
         <module>printer</module>
         <module>2020-jour18</module>
         <module>2020-jour19</module>
+        <module>2020-jour20</module>
     </modules>
 
     <dependencies>
