Advent of Code Java 2020 Day 21

--- a/Java/2020/pom.xml
+++ b/Java/2020/pom.xml
@@ -30,6 +30,7 @@
         <module>2020-jour18</module>
         <module>2020-jour19</module>
         <module>2020-jour20</module>
+        <module>2020-jour21</module>
     </modules>
 
     <dependencies>
