--- a/Java/2020/pom.xml
+++ b/Java/2020/pom.xml
@@ -31,6 +31,7 @@
         <module>2020-jour19</module>
         <module>2020-jour20</module>
         <module>2020-jour21</module>
+        <module>2020-jour22</module>
     </modules>
 
     <dependencies>
