--- a/Java/2020/pom.xml
+++ b/Java/2020/pom.xml
@@ -32,6 +32,7 @@
         <module>2020-jour20</module>
         <module>2020-jour21</module>
         <module>2020-jour22</module>
+        <module>2020-jour23</module>
     </modules>
 
     <dependencies>
