Advent of Code Java 2020 Day 24

--- a/Java/2020/pom.xml
+++ b/Java/2020/pom.xml
@@ -33,6 +33,7 @@
         <module>2020-jour21</module>
         <module>2020-jour22</module>
         <module>2020-jour23</module>
+        <module>2020-jour24</module>
     </modules>
 
     <dependencies>
