Advent of Code Java 2020 Day 25

--- a/Java/2020/pom.xml
+++ b/Java/2020/pom.xml
@@ -34,6 +34,7 @@
         <module>2020-jour22</module>
         <module>2020-jour23</module>
         <module>2020-jour24</module>
+        <module>2020-jour25</module>
     </modules>
 
     <dependencies>
