--- a/Java/2015/pom.xml
+++ b/Java/2015/pom.xml
@@ -26,6 +26,7 @@
         <module>2015-jour1</module>
         <module>2015-jour2</module>
         <module>2015-jour3</module>
+        <module>2015-jour4</module>
     </modules>
 
     <dependencies>
