--- a/Java/2015/pom.xml
+++ b/Java/2015/pom.xml
@@ -27,6 +27,7 @@
         <module>2015-jour2</module>
         <module>2015-jour3</module>
         <module>2015-jour4</module>
+        <module>2015-jour5</module>
     </modules>
 
     <dependencies>
