use pretty printer

--- a/Java/2015/pom.xml
+++ b/Java/2015/pom.xml
@@ -38,7 +38,17 @@
             <artifactId>lombok</artifactId>
             <version>1.18.8</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.ErwanLT</groupId>
+            <artifactId>PrettyPrinter</artifactId>
+        </dependency>
     </dependencies>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 
 </project>
